# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-03-12 ede
  * fix regression "#455 UI problem with decimal parameters and Locale" 
    rendering MultiInputDialog based plugins using decimal values unusable for 
    locales formatting decimal number w/ comma instead of dot
    https://sourceforge.net/p/jump-pilot/bugs/455/

2017-03-11 Giuseppe Aruta
  * Added CadTools extension to OpenJUMP Plus. A set of cad-like tools 
    and plugins mainly deriving from Kosmo 3.0 source code

2017-03-06 ede
  * initial java9 support, still compiled w/ java8
    workbench comes up, PLUS extensions throw some errors during startup still

2017-03-04 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug in PostGIS writer happening in the evolution merging process

2017-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade csv-driver to 1.0.0 (encoding option to writer + other improvements)

2017-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Restore ZoomToWMSPlugIn capabilities in more recent ZoomToWMSLayerPlugIn
  * WMSStylePlugIn dialog did not close (related to Fix #453)

* release 1.10 *****************************************************************

2017-01-27 mmichaud <m.michael.michaud@orange.fr>
  * Fix #453 about closing ChangeRasterStyle dialog (related to #433)

2017-01-21 mmichaud <m.michael.michaud@orange.fr>
  * FR 252 : Add a PlugIn to search for a command (menu Help)
  * Update CTSPlugIn to 0.1.3 for OJ 1.10 (SuggestTree is now factorized in OJ)

2017-01-17 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade GraphToolBox to 0.4.0 for PLUS version

2017-01-11 mmichaud <m.michael.michaud@orange.fr>
  * Prevent addition of a second attribute with the same name in FeatureSchema

2017-01-08 ede
  * fix #450: Zoombar/Edittoolbox checkbox menu item de-synchronized when