@@ -3,6 +3,9 @@
 # 2. make sure that lines break at 80 chars for constricted display situations
 #<-------------------------------- 80 chars ---------------------------------->#
 
+2017-03-13 mmichaud <m.michael.michaud@orange.fr>
+  * Small improvements in UpdateWithJoinPlugIn
+
 2017-03-12 ede
   * fix regression "#455 UI problem with decimal parameters and Locale" 
     rendering MultiInputDialog based plugins using decimal values unusable for 
